--- a/src/Diamante/FrontBundle/Resources/assets/js/modules/Header/templates/header.ejs
+++ b/src/Diamante/FrontBundle/Resources/assets/js/modules/Header/templates/header.ejs
@@ -1,6 +1,6 @@
 <div class="row header-links">
-  <a href="<%= baseUrl %>" class="logo col-sm-3 col-xs-6">
-    <img src="<%= basePath %>/bundles/diamantefront/img/logo.png" alt="DiamanteDesk" class="visible-md-block visible-lg-block visible-sm-block" />
+  <a href="<%= baseUrl %>" class="logo col-sm-3 col-xs-4">
+    <img src="<%= basePath %>/bundles/diamantefront/img/logo.png" alt="DiamanteDesk" class="hidden-xs" />
     <img src="<%= basePath %>/bundles/diamantefront/img/logo_xs.png" alt="DiamanteDesk" class="logo-xs visible-xs-block" />
   </a>
   <div class="col-sm-3 header-create-ticket">
