--- a/src/Diamante/FrontBundle/Resources/assets/js/modules/Ticket/templates/view.ejs
+++ b/src/Diamante/FrontBundle/Resources/assets/js/modules/Ticket/templates/view.ejs
@@ -1,56 +1,42 @@
-<p>
-    <a class="btn btn-link js-back" href="<%= back_url %>">
-        <i class="fa fa-chevron-left"></i>Back
-    </a>
-</p>
-<h1><%= subject %></h1>
-<small class="ticket-id">Ticket ID: <%= key %></small>
 <div class="row">
-    <div class="col-md-8">
+    <div class="col-xs-6 col-sm-12">
+        <a class="btn btn-link btn-back js-back" href="<%= back_url %>">
+            <i class="fa fa-caret-left"></i>To all tickets
+        </a>
+    </div>
+    <div class="col-xs-6 col-sm-4 col-sm-push-8 col-md-3 col-md-push-9 ticket-action">
+        <% if(status !== 'closed'){ %>
+        <button type="button" class="btn btn-primary btn-block js-close-ticket">Resolve Ticket</button>
+        <% } else { %>
+        <button type="button" class="btn btn-primary btn-block js-open-ticket">Reopen Ticket</button>
+        <% } %>
+    </div>
+    <div class="col-xs-12 col-sm-8 col-sm-pull-4 col-md-9 col-md-pull-3 ticket-title">
         <div class="ticket-actions pull-right">
-            <button class="btn btn-primary js-edit-ticket">Edit Ticket</button>
-            <!--button class="btn btn-primary">Join Ticket</button-->
-            <!--div class="btn-group">
-                <div class="btn btn-primary">6</div>
-                <button class="btn btn-primary">Vote</button>
-            </div-->
+            <button class="btn btn-link js-edit-ticket" title="Edit Ticket"><i class="fa fa-pencil"></i></button>
         </div>
+        <h1><%= subject %></h1>
+    </div>
+</div>
+<div class="row">
+    <div class="col-sm-8 col-md-9 ticket-content">
         <div class="ticket-meta">
-            <div class="row">
-                <span class="col-xs-4"><%= created %></span>
-                <span class="col-xs-4"><%= priority %></span>
-                <span class="col-xs-4"><%= status %></span>
-            </div>
+            <span class="key"><%= key %></span>
+            <span class="createdAt"><%= created %></span>
+            <span class="priority">Priority: <span><%= priority %></span></span>
+            <span class="status">Status: <span><%= status %></span></span>
         </div>
-        <h2>Ticket Description</h2>
-        <p><%= description %></p>
-        <div class="block" id="comments">
+        <div class="ticket-description"><%= description %></div>
+    </div>
+    <div class="col-sm-4 col-md-3 ticket-aside">
+        <div class="block" id="attachments">
+            Loading ...
+        </div>
+        <div class="block" id="watchers">
             Loading ...
         </div>
     </div>
-    <div class="col-md-4 ticket-aside">
-        <div class="group">
-            <div class="block">
-                <% if(status !== 'closed'){ %>
-                <button type="button" class="btn btn-primary btn-lg btn-block js-close-ticket">Resolve Ticket</button>
-                <% } else { %>
-                <button type="button" class="btn btn-primary btn-lg btn-block js-open-ticket">Reopen Ticket</button>
-                <% } %>
-            </div>
-            <div class="block" id="attachments">
-                Loading ...
-            </div>
-            <div class="block" id="watchers">
-                Loading ...
-            </div>
-        </div>
-        <!--div class="group">
-            <div class="block">
-                <h2>Submited by</h2>
-                <ul class="list-unstyled">
-                    <li><a href="#"><%= reporter.first_name %> <%= reporter.last_name %></a></li>
-                </ul>
-            </div>
-        </div-->
+    <div class="col-sm-8 col-md-9 block" id="comments">
+        Loading ...
     </div>
 </div>
