--- a/src/Diamante/FrontBundle/Resources/assets/less/modules/Attachment/dropzone.less
+++ b/src/Diamante/FrontBundle/Resources/assets/less/modules/Attachment/dropzone.less
@@ -1,16 +1,19 @@
 .dropzone {
-  background: #e3e3e3;
-  border: 1px #979797 dashed;
-  border-radius: 5px;
+  border: 1px #d0d0d0 dashed;
   position: relative;
   overflow: hidden;
 }
 .dropzone-label {
   font-weight: normal;
   display: block;
-  padding: 10px;
-  margin: 0;
+  padding: 15px;
   text-align: center;
+  font-size: 12px;
+  color: lighten(#1c1c1c, 50%);
+  margin: 0;
+  .dropzone.active  & {
+    visibility: hidden;
+  }
 }
 .dropzone-input {
   position: absolute;
@@ -32,11 +35,11 @@
 .dropzone-progress {
   display: none;
   position: absolute;
-  top: 0;
+  top: 50%;
   left: 0;
   right: 0;
   bottom: 0;
-  margin: 10px;
+  margin: -10px 10px 0;
   height: 20px;
 }
 
