--- a/src/Diamante/FrontBundle/Resources/assets/less/variables.less
+++ b/src/Diamante/FrontBundle/Resources/assets/less/variables.less
@@ -18,8 +18,8 @@
 @btn-default-bg: #fff;
 @btn-default-border: rgba(0, 0, 0, .6);
 
-@btn-primary-bg: #50828E;
-@btn-primary-border: #50828E;
+@btn-primary-bg: @mainColor;
+@btn-primary-border: @mainColor;
 
 // Modals
 @modal-backdrop-bg: #fff;
