--- a/src/Diamante/FrontBundle/Resources/public/js/modules/Comment/templates/form.ejs
+++ b/src/Diamante/FrontBundle/Resources/public/js/modules/Comment/templates/form.ejs
@@ -1,3 +1,4 @@
+<h2>Add Comment</h2>
 <form action="/" role="form">
     <div class="form-group">
         <textarea class="form-control" name="content" id="comment-content" rows="4"><%= content %></textarea>
